--- a/Frontend/src/DisplayAllEvents.css
+++ b/Frontend/src/DisplayAllEvents.css
@@ -1,9 +1,9 @@
-.teams-container {
+.events-container {
     display: flex;
     flex-wrap: wrap;
 }
 
-.team-card {
+.group-card {
     margin: 10px; 
     padding: 15px;
     border: 2px solid #444;
@@ -17,13 +17,13 @@
     justify-content: center;
 }
 
-.team-card h2 {
+.group-card h2 {
     font-size: 20px;
     margin: 0;
     color: #ffd700; /* Gold color */
 }
 
-.team-card p {
+.group-card p {
     margin: 8px 0;
     color: #fff; /* White color */
 }
